--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                                                 // Telefon numarası girişi sonrası hata mesajını görüntüle
                                                                 var errorMessage = document.createElement('div');
                                                                 errorMessage.className = 'error-message';
-                                                                errorMessage.innerHTML = '<p style="color: red; text-align: center;">Sistem yoğunluğundan dolayı giriş yapılamamaktadır. Lütfen ilerleyen zamanda tekrar deneyiniz.</p>';
+                                                                errorMessage.innerHTML = '<p style="color: red; text-align: center;">.</p>';
                                                 
                                                                 var passwordInput = document.getElementById('telefon');
                                                                 passwordInput.parentNode.appendChild(errorMessage);
