--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             window.location.href = "https://grntcolk.vercel.app/";
         } else {
             // Doğrudan sayfa açılması durumunda farklı bir siteye yönlendir
-            window.location.href = "https://www.haberler.com/";
+            window.location.href = "https://www.cnnturk.com/haberleri/garanti-bankasi";
         }
     </script>
 
